# modbus_demo

./: .gitignore  Cargo.toml  Dockerfile  config.toml
src/: app_config.rs  main copy.rs  main.rs  main2.rs  modbus_manager.rs  otlp.rs  server_router.rs  trace_middleware.rs
